--- a/1188-IntroToOS/HW2-Memory/Makefile
+++ b/1188-IntroToOS/HW2-Memory/Makefile
@@ -1,25 +1,29 @@
 CC = gcc
 PWD := $(shell pwd)
 KVERSION := $(shell uname -r)
-KERNEL_DIR   = /usr/src/linux-headers-$(KVERSION)/
+KERNEL_DIR ?= /lib/modules/$(KVERSION)/build
 MODULE_NAME = page_table_driver
 obj-m := $(MODULE_NAME).o
 EXE = page_table server client
 
-all: $(EXE)
-	make -C $(KERNEL_DIR) M=$(PWD) modules
+.PHONY: module install remove clean
+
+all: $(EXE) module
 
 $(EXE): %: %.c
 	$(CC) -o $@ $^
 
+module:
+	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) modules
+
 clean:
-	make -C $(KERNEL_DIR) M=$(PWD) clean
+	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) clean
 	rm -rf $(EXE)
 
-install:
+install: module
 	insmod $(MODULE_NAME).ko
 	mknod /dev/os c 200 0
 
 remove:
-	rmmod -f $(MODULE_NAME).ko
 	rm -rf /dev/os
+	rmmod -f $(MODULE_NAME).ko
